Adds PHP, SQL, WebAnnexes, changes Forum into Contact. Externally created Slack and Trello accounts

--- a/academie/src/components/styles/helpers.css
+++ b/academie/src/components/styles/helpers.css
@@ -35,6 +35,11 @@ h1, h2 {
 	font-weight: normal;
 	margin-bottom: 0;
 }
+
+.commented{
+	display: inline-flex;
+	margin-right: 30px;
+}
 /* END TEXT */
 
 
