--- a/academie/src/index.css
+++ b/academie/src/index.css
@@ -8,13 +8,13 @@ body {
 body {
   font: 14px 'Lato', Verdana, Futura, sans-serif;
   background-color: #f0f3f4;
-  padding-bottom: 60px;   /* Height of the footer */
 }
 
 /* CONTAINER AT index.js LEVEL */
 .container {
    min-height:100%;
-   position:relative;
+   width: 100%;
+   position: absolute;
 }
 
 .page {
@@ -67,7 +67,7 @@ footer{
   justify-content: space-around;
   align-items: center;
 
-  position: fixed;
+  position: absolute;
   bottom: 0;
   width: 100%;
   height: 60px;
