Adds C and Assembly code examples for Binaries page, adds backslashes escaping in escaper.py

--- a/academie/src/index.css
+++ b/academie/src/index.css
@@ -163,6 +163,17 @@ button{
   padding: 10px;
 }
 
+code{
+  background-color: #272822;
+  padding: 5px;
+  border-radius: 5px;
+  color: #fd0;
+}
+
+.zbrunSpeaking{
+  text-align: right;
+  font-style: italic;
+}
 
 .commented{
   display: inline-flex;
