--- a/academie/src/index.css
+++ b/academie/src/index.css
@@ -165,7 +165,8 @@ button{
 
 code{
   background-color: #272822;
-  padding: 5px;
+  padding: 3px;
+  margin: 2px;
   border-radius: 5px;
   color: #fd0;
 }
